--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "desenvolvendo",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next dev"
   },
   "author": "JESSÉ OLIVEIRA",
   "license": "ISC",
   "dependencies": {
-    "react": "^19.1.1"
+    "next": "15.5.4",
+    "react": "19.1.1",
+    "react-dom": "19.2.0"
   }
 }
+ 
